src/test/deca/syntax/valid/provided/DeclVarInit.deca
// DESCRIPTION : Déclaration d'un entier avec intialisation
{
    int i = 4;
}
