src/test/deca/syntax/invalid/provided/FalseVisbility.deca
// DESCRIPTION: Déclaration de field avec fausse visibilité
class test{
  public int c = 4;
  }
